tests/paczka1/fuzzy1/45686321.err
Error in line 1: S833 S833 99,5
Error in line 2: S833 S535 62,0
Error in line 5: S833 S833 64,9
Error in line 15: go36z S774 2,4
Error in line 32: go36z S363 87,0
